--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "scripts": {
+    "db-builder:build:watch": "yarn workspace db-builder build:watch",
+    "db-builder:dev": "yarn workspace db-builder dev"
+  }
 }
