--- a/packages/db-builder/package.json
+++ b/packages/db-builder/package.json
@@ -19,7 +19,7 @@
     "clean": "rimraf coverage build tmp",
     "build": "tsc -p tsconfig.release.json",
     "build:watch": "tsc -w -p tsconfig.release.json",
-    "dev": "nodemon ./build/src/main.js",
+    "dev": "nodemon ./dist",
     "lint": "tslint -t stylish --project \"tsconfig.json\"",
     "test": "jest --coverage",
     "test:watch": "jest --watch"
