--- a/package.json
+++ b/package.json
@@ -7,5 +7,7 @@
   "workspaces": [
     "packages/*"
   ],
-  "scripts": {}
+  "scripts": {
+    "functions:start": "yarn workspace functions start"
+  }
 }
