--- a/packages/functions/tsconfig.json
+++ b/packages/functions/tsconfig.json
@@ -6,8 +6,9 @@
     "outDir": "dist",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "resolveJsonModule": true
   },
   "compileOnSave": true,
-  "include": ["src"]
+  "include": ["src", "src/credentials.json"]
 }
