--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -8,8 +8,8 @@
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "env:dev": "firebase use development && cp ./src/credentials-dev.json ./src/credentials.json",
-    "env:prod": "firebase use production && cp ./src/credentials-prod.json ./src/credentials.json",
+    "env:dev": "firebase use development && cp ../keys/firebase/development/credentials.json ./src/credentials.json",
+    "env:prod": "firebase use production && cp ../keys/firebase/development/credentials.json ./src/credentials.json",
     "start": "yarn run env:dev && concurrently \"yarn run build:watch\" \"sleep 1 && firebase serve --only functions\"",
     "predeploy": "yarn run build",
     "deploy": "firebase deploy --only functions",
