--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "firestore-backup-restore": "^1.3.1",
     "lerna": "^3.16.4"
   },
   "workspaces": [
@@ -10,6 +11,7 @@
   "scripts": {
     "functions:start": "yarn workspace functions start",
     "functions:deploy:dev": "yarn workspace functions deploy:dev",
-    "functions:deploy:prod": "yarn workspace functions deploy:prod"
+    "functions:deploy:prod": "yarn workspace functions deploy:prod",
+    "database:backup": "firestore-backup-restore --accountCredentials ./packages/keys/firebase/development/credentials.json --backupPath ./packages/database"
   }
 }
