--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "devDependencies": {
     "lerna": "^3.16.4"
   },
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ],
+    "nohoist": [
+      "**/react-native",
+      "**/react-native/**"
+    ]
+  },
   "scripts": {
     "app:start:web": "yarn workspace app start:web",
     "app:start:android": "yarn workspace app start:android",
