App/Add storybook

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -17,16 +17,23 @@
     "build:types": "tsc --emitDeclarationOnly",
     "type-check": "tsc --noEmit",
     "type-check:watch": "yarn type-check -w",
-    "lint": "eslint --config .eslintrc --ext .ts src"
+    "lint": "eslint --config .eslintrc --ext .ts src",
+    "start:storybook": "start-storybook -p 6006",
+    "build:storybook": "build-storybook"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
     "@babel/plugin-proposal-decorators": "7.4.4",
     "@babel/preset-env": "7.5.5",
     "@react-native-community/cli": "1.10.0",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/react": "^5.2.1",
     "@types/enzyme": "3.10.3",
     "@types/jest": "24.0.18",
     "@types/react": "16.8.24",
+    "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "2.1.0",
     "@typescript-eslint/parser": "2.1.0",
     "babel-loader": "8.0.6",
@@ -44,7 +51,7 @@
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.56.0",
     "rnpm-plugin-windows": "0.2.11",
-    "typescript": "3.6.2",
+    "typescript": "^3.6.3",
     "webpack": "4.39.3",
     "webpack-cli": "3.3.7",
     "webpack-dev-server": "3.8.0",
