--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "app:start:web": "yarn workspace app start:web",
     "app:start:android": "yarn workspace app start:android",
     "app:start:ios": "yarn workspace app start:ios",
+    "app:start:storybook": "yarn workspace app start:storybook",
     "functions:start": "yarn workspace functions start",
     "functions:deploy:dev": "yarn workspace functions deploy:dev",
     "functions:deploy:prod": "yarn workspace functions deploy:prod",
