--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -33,6 +33,8 @@
     "@types/enzyme": "3.10.3",
     "@types/jest": "24.0.18",
     "@types/react": "16.8.24",
+    "@types/react-router-dom": "^5.1.0",
+    "@types/react-router-native": "^5.1.0",
     "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "2.1.0",
     "@typescript-eslint/parser": "2.1.0",
@@ -62,6 +64,8 @@
     "react-dom": "16.8.6",
     "react-native": "0.59.10",
     "react-native-windows": "0.59.0-rc.3",
+    "react-router-dom": "^5.1.2",
+    "react-router-native": "^5.1.2",
     "reactxp": "2.0.0-rc.1",
     "rnpm-plugin-windows": "^0.3.5"
   }
