--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -63,6 +63,7 @@
     "react-native": "0.59.10",
     "react-native-windows": "0.59.0-rc.3",
     "reactxp": "2.0.0-rc.1",
+    "reactxp-navigation": "^2.0.0-rc.1",
     "rnpm-plugin-windows": "^0.3.5"
   }
 }
