--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -18,7 +18,7 @@
     "type-check": "tsc --noEmit",
     "type-check:watch": "yarn type-check -w",
     "lint": "eslint --config .eslintrc --ext .ts src",
-    "start:storybook": "start-storybook -p 6006",
+    "start:storybook": "start-storybook -p 6006 -s ./src",
     "build:storybook": "build-storybook"
   },
   "devDependencies": {
@@ -46,6 +46,7 @@
     "eslint-loader": "3.0.0",
     "eslint-plugin-jest": "22.16.0",
     "eslint-plugin-react": "7.14.3",
+    "file-loader": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "1.5.0",
     "html-webpack-plugin": "3.2.0",
     "jest": "24.9.0",
