--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -2,7 +2,7 @@
   "name": "functions",
   "version": "0.0.1",
   "engines": {
-    "node": "11"
+    "node": "8"
   },
   "scripts": {
     "lint": "tslint --project tsconfig.json",
@@ -18,6 +18,7 @@
   },
   "main": "dist/index.js",
   "dependencies": {
+    "@google-cloud/firestore": "^2.4.0",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.1.0",
     "public-holidays": "^0.2.2"
@@ -27,5 +28,10 @@
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   },
-  "private": true
+  "private": true,
+  "workspaces": {
+    "nohoist": [
+      "**"
+    ]
+  }
 }
