--- a/packages/create-countries/package.json
+++ b/packages/create-countries/package.json
@@ -5,11 +5,15 @@
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "start": "yarn run build:watch"
+    "watch": "nodemon ./dist/index.js",
+    "copy-images": "cp -R ./src/images ./dist/images",
+    "start": "yarn run copy-images && concurrently \"yarn run build:watch\" \"sleep 1 && yarn run watch\""
   },
   "main": "dist/index.js",
   "dependencies": {},
   "devDependencies": {
+    "concurrently": "^5.0.0",
+    "nodemon": "^1.19.3",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   },
