--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -30,6 +30,7 @@
     "@storybook/addon-links": "^5.2.1",
     "@storybook/addons": "^5.2.1",
     "@storybook/react": "^5.2.1",
+    "@types/color": "^3.0.0",
     "@types/enzyme": "3.10.3",
     "@types/jest": "24.0.18",
     "@types/react": "16.8.24",
@@ -59,6 +60,7 @@
     "webpack-merge": "4.2.2"
   },
   "dependencies": {
+    "color": "^3.1.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-native": "0.59.10",
