--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -26,6 +26,7 @@
     "@babel/plugin-proposal-decorators": "7.4.4",
     "@babel/preset-env": "7.5.5",
     "@react-native-community/cli": "1.10.0",
+    "@storybook/addon-a11y": "^5.2.3",
     "@storybook/addon-actions": "^5.2.1",
     "@storybook/addon-links": "^5.2.1",
     "@storybook/addons": "^5.2.1",
