--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -28,6 +28,7 @@
     "@react-native-community/cli": "1.10.0",
     "@storybook/addon-a11y": "^5.2.3",
     "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-docs": "^5.2.3",
     "@storybook/addon-links": "^5.2.1",
     "@storybook/addons": "^5.2.1",
     "@storybook/react": "^5.2.1",
@@ -53,6 +54,7 @@
     "html-webpack-plugin": "3.2.0",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.56.0",
+    "react-docgen-typescript-loader": "^3.3.0",
     "rnpm-plugin-windows": "0.2.11",
     "typescript": "^3.6.3",
     "webpack": "4.39.3",
