--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -15,7 +15,8 @@
     "test:native": "node scripts/test.js --config \"./config/native.jest.config.js\"",
     "test:native-watch": "node scripts/test.js --watch --config \"./config/native.jest.config.js\"",
     "coverage": "node scripts/test.js --coverage --config \"./config/web.jest.config.js\"",
-    "coverage:native": "node scripts/test.js --config \"./config/native.jest.config.js\" --coverage"
+    "coverage:native": "node scripts/test.js --config \"./config/native.jest.config.js\" --coverage",
+    "postinstall": "cp ./hacks/findMatchingSimulator.js ./node_modules/@react-native-community/cli/build/commands/runIOS/findMatchingSimulator.js"
   },
   "dependencies": {
     "react": "^16.6.x",
