--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "app:start:web": "yarn workspace app start:web",
     "app:start:android": "yarn workspace app start:android",
     "app:start:ios": "yarn workspace app start:ios",
-    "app:start:rn-dev-server": "yarn workspace app start:rn-dev-server",
-    "app:start:storybook": "yarn workspace app start:storybook",
+    "app:build:web": "yarn workspace app build:web",
     "cc:start": "yarn workspace create-countries start",
     "cc:populate": "cp -R ./packages/create-countries/dist/images/* ./packages/app/src/assets/images/countries",
     "database:backup": "yarn workspace database backup",
