--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "start": "./node_modules/.bin/react-native start",
     "start-clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && npm start -- --reset-cache",
-    "android": "./node_modules/.bin/react-native run-android",
-    "ios": "./node_modules/.bin/react-native run-ios",
-    "web": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "start:android": "./node_modules/.bin/react-native run-android",
+    "start:ios": "./node_modules/.bin/react-native run-ios",
+    "start:web": "node scripts/start.js",
+    "build:web": "node scripts/build.js",
     "test": "npm run test:web && npm run test:native",
     "test:web-watch": "node scripts/test.js --watch --config \"./config/web.jest.config.js\"",
     "test:web": "node scripts/test.js --config \"./config/web.jest.config.js\"",
