--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -10,16 +10,17 @@
     "start:ios": "yarn rn-cli run-ios",
     "start:web": "cross-env platform=web webpack-dev-server --config=web/webpack/dev.js --progress --colors --mode=development",
     "start:rn-dev-server": "yarn rn-cli start --reset-cache",
-    "build:web": "cross-env platform=web webpack --config=web/webpack/prod.js --progress --colors --mode=production",
+    "copy-assets": "cp -R ./src/assets ./dist-web",
+    "build:web": "cross-env platform=web webpack --config=web/webpack/prod.js --progress --colors --mode=production && yarn run copy-assets",
     "test": "jest -c jest/jest.config.js",
-    "test:watch": "yarn test --watch",
-    "test:debug": "node --inspect-brk node_modules/.bin/jest -c jest/jest.config.js --runInBand",
     "build:types": "tsc --emitDeclarationOnly",
-    "type-check": "tsc --noEmit",
-    "type-check:watch": "yarn type-check -w",
-    "lint": "eslint --config .eslintrc --ext .ts src",
     "start:storybook": "start-storybook -p 6006 -s ./src",
-    "build:storybook": "build-storybook"
+    "build:storybook": "build-storybook",
+    "env:dev": "firebase use development",
+    "env:prod": "firebase use production",
+    "deploy:web": "firebase deploy --only hosting",
+    "deploy:web:dev": "yarn run env:dev && yarn run deploy:web",
+    "deploy:web:prod": "yarn run env:prod && yarn run deploy:web"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
