--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "app:start:ios": "yarn workspace app start:ios",
     "app:start:rn-dev-server": "yarn workspace app start:rn-dev-server",
     "app:start:storybook": "yarn workspace app start:storybook",
+    "app:deploy:web:dev": "yarn workspace app deploy:web:dev",
+    "app:deploy:web:prod": "yarn workspace app deploy:web:prod",
     "cc:start": "yarn workspace create-countries start",
     "cc:populate": "yarn workspace create-countries populate && cp -R ./packages/create-countries/dist/images/* ./packages/app/src/assets/images/countries",
     "database:backup": "yarn workspace database backup",
