--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -36,6 +36,7 @@
     "@types/color": "^3.0.0",
     "@types/enzyme": "3.10.3",
     "@types/jest": "24.0.18",
+    "@types/lodash": "^4.14.144",
     "@types/react": "16.8.24",
     "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "2.1.0",
