--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "app:start:storybook": "yarn workspace app start:storybook",
     "app:deploy:web:dev": "yarn workspace app deploy:web:dev",
     "app:deploy:web:prod": "yarn workspace app deploy:web:prod",
+    "app:test": "yarn workspace app test",
     "cc:start": "yarn workspace create-countries start",
     "cc:populate": "yarn workspace create-countries populate && cp -R ./packages/create-countries/dist/images/* ./packages/app/src/assets/images/countries",
     "database:backup": "yarn workspace database backup",
