--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -34,7 +34,6 @@
     "@storybook/addons": "^5.2.1",
     "@storybook/react": "^5.2.1",
     "@types/color": "^3.0.0",
-    "@types/enzyme": "3.10.3",
     "@types/jest": "24.0.18",
     "@types/lodash": "^4.14.144",
     "@types/react": "16.8.24",
@@ -45,9 +44,6 @@
     "babel-loader": "8.0.6",
     "compression-webpack-plugin": "3.0.0",
     "cross-env": "5.2.1",
-    "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.14.0",
-    "enzyme-to-json": "3.4.0",
     "eslint": "6.3.0",
     "eslint-loader": "3.0.0",
     "eslint-plugin-jest": "22.16.0",
@@ -58,6 +54,7 @@
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.56.0",
     "react-docgen-typescript-loader": "^3.3.0",
+    "react-test-renderer": "^16.11.0",
     "rnpm-plugin-windows": "0.2.11",
     "typescript": "^3.6.3",
     "webpack": "4.39.3",
@@ -66,6 +63,7 @@
     "webpack-merge": "4.2.2"
   },
   "dependencies": {
+    "@types/react-test-renderer": "^16.9.1",
     "color": "^3.1.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
