--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -10,14 +10,16 @@
     "start:ios": "yarn rn-cli run-ios",
     "start:web": "cross-env platform=web webpack-dev-server --config=web/webpack/dev.js --progress --colors --mode=development",
     "start:rn-dev-server": "yarn rn-cli start --reset-cache",
-    "copy-assets": "cp -R ./src/assets ./dist-web",
-    "build:web": "cross-env platform=web webpack --config=web/webpack/prod.js --progress --colors --mode=production && yarn run copy-assets",
     "test": "jest -c jest/jest.config.js",
     "build:types": "tsc --emitDeclarationOnly",
     "start:storybook": "start-storybook -p 6006 -s ./src",
     "build:storybook": "build-storybook",
     "env:dev": "firebase use development",
     "env:prod": "firebase use production",
+    "copy-assets": "cp -R ./src/assets ./dist-web",
+    "build:web": "cross-env platform=web webpack --config=web/webpack/prod.js --progress --colors --mode=production && yarn run copy-assets",
+    "build:web:dev": "yarn run env:dev && yarn run build:web",
+    "build:web:prod": "yarn run env:prod && yarn run build:web",
     "deploy:web": "firebase deploy --only hosting",
     "deploy:web:dev": "yarn run env:dev && yarn run deploy:web",
     "deploy:web:prod": "yarn run env:prod && yarn run deploy:web"
