--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -67,6 +67,7 @@
   "dependencies": {
     "@types/react-test-renderer": "^16.9.1",
     "color": "^3.1.2",
+    "fuse.js": "^3.4.5",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-native": "0.59.10",
