--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -16,8 +16,8 @@
     "build:storybook": "build-storybook",
     "env:dev": "firebase use development",
     "env:prod": "firebase use production",
-    "copy-assets": "cp -R ./src/assets ./dist-web",
-    "build:web": "cross-env platform=web webpack --config=web/webpack/prod.js --progress --colors --mode=production && yarn run copy-assets",
+    "copy-images": "cp -R ./src/assets/images ./dist-web",
+    "build:web": "cross-env platform=web webpack --config=web/webpack/prod.js --progress --colors --mode=production && yarn run copy-images",
     "build:web:dev": "yarn run env:dev && yarn run build:web",
     "build:web:prod": "yarn run env:prod && yarn run build:web",
     "deploy:web": "firebase deploy --only hosting",
