--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -66,15 +66,21 @@
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "@types/react-redux": "^7.1.5",
     "@types/react-test-renderer": "^16.9.1",
+    "@types/redux-logger": "^3.0.7",
     "color": "^3.1.2",
     "fuse.js": "^3.4.5",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-native": "0.59.10",
     "react-native-windows": "0.59.0-rc.3",
+    "react-redux": "^7.1.3",
     "reactxp": "2.0.0-rc.1",
     "reactxp-navigation": "^2.0.0-rc.1",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "rnpm-plugin-windows": "^0.3.5"
   },
   "workspaces": {
