--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -43,6 +43,10 @@
     "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "2.1.0",
     "@typescript-eslint/parser": "2.1.0",
+    "@types/react-native": "^0.60.22",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-test-renderer": "^16.9.1",
+    "@types/redux-logger": "^3.0.7",
     "babel-loader": "8.0.6",
     "compression-webpack-plugin": "3.0.0",
     "cross-env": "5.2.1",
@@ -66,9 +70,6 @@
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-test-renderer": "^16.9.1",
-    "@types/redux-logger": "^3.0.7",
     "color": "^3.1.2",
     "fuse.js": "^3.4.5",
     "react": "16.8.6",
