--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -40,13 +40,15 @@
     "@types/lodash": "^4.14.144",
     "@types/react": "16.8.24",
     "@types/react-dom": "^16.9.3",
+    "@types/react-native": "^0.60.22",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.2",
+    "@types/react-router-native": "^5.1.0",
+    "@types/react-test-renderer": "^16.9.1",
+    "@types/redux-logger": "^3.0.7",
     "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "2.1.0",
     "@typescript-eslint/parser": "2.1.0",
-    "@types/react-native": "^0.60.22",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-test-renderer": "^16.9.1",
-    "@types/redux-logger": "^3.0.7",
     "babel-loader": "8.0.6",
     "compression-webpack-plugin": "3.0.0",
     "cross-env": "5.2.1",
@@ -62,6 +64,7 @@
     "react-docgen-typescript-loader": "^3.3.0",
     "react-test-renderer": "^16.11.0",
     "rnpm-plugin-windows": "0.2.11",
+    "storybook-react-router": "^1.0.8",
     "typescript": "^3.6.3",
     "webpack": "4.39.3",
     "webpack-cli": "3.3.7",
@@ -69,7 +72,6 @@
     "webpack-merge": "4.2.2"
   },
   "dependencies": {
-    "@reach/router": "^1.2.1",
     "color": "^3.1.2",
     "fuse.js": "^3.4.5",
     "react": "16.8.6",
@@ -77,8 +79,9 @@
     "react-native": "0.59.10",
     "react-native-windows": "0.59.0-rc.3",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-router-native": "^5.1.2",
     "reactxp": "2.0.0-rc.1",
-    "reactxp-navigation": "^2.0.0-rc.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
