--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -85,7 +85,8 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "rnpm-plugin-windows": "^0.3.5"
+    "rnpm-plugin-windows": "^0.3.5",
+    "typesafe-actions": "^5.1.0"
   },
   "workspaces": {
     "nohoist": [
