--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -8,7 +8,7 @@
     "start:android": "yarn rn-cli run-android",
     "start:windows": "yarn rn-cli run-windows",
     "start:ios": "yarn rn-cli run-ios",
-    "start:web": "cross-env platform=web webpack-dev-server --config=web/webpack/dev.js --progress --colors --mode=development",
+    "start:web": "cross-env platform=web && cross-env test=what webpack-dev-server --config=web/webpack/dev.js --progress --colors --mode=development",
     "start:rn-dev-server": "yarn rn-cli start --reset-cache",
     "test": "jest -c jest/jest.config.js",
     "build:types": "tsc --emitDeclarationOnly",
