--- a/packages/app/android/app/src/main/AndroidManifest.xml
+++ b/packages/app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest
   xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.app"
+  package="co.za.shaunsaker.workless"
 >
     <uses-permission android:name="android.permission.INTERNET" />
 
