--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,17 +5,17 @@
   "version": "0.0.1",
   "scripts": {
     "rn-cli": "node scripts/react-native.js",
-    "start:android": "yarn rn-cli run-android",
-    "start:windows": "yarn rn-cli run-windows",
-    "start:ios": "yarn rn-cli run-ios",
-    "start:web": "cross-env platform=web && cross-env test=what webpack-dev-server --config=web/webpack/dev.js --progress --colors --mode=development",
-    "start:rn-dev-server": "yarn rn-cli start --reset-cache",
+    "start:android": "yarn run env:dev && yarn rn-cli run-android",
+    "start:windows": "yarn run env:dev && yarn rn-cli run-windows",
+    "start:ios": "yarn run env:dev && yarn rn-cli run-ios",
+    "start:web": "yarn run env:dev && cross-env platform=web && cross-env test=what webpack-dev-server --config=web/webpack/dev.js --progress --colors --mode=development",
+    "start:rn-dev-server": "yarn run env:dev && yarn rn-cli start --reset-cache",
     "test": "jest -c jest/jest.config.js",
     "build:types": "tsc --emitDeclarationOnly",
     "start:storybook": "start-storybook -p 6006 -s ./src",
     "build:storybook": "build-storybook",
-    "env:dev": "firebase use development",
-    "env:prod": "firebase use production",
+    "env:dev": "cp ./config/firebase/development/config.ts ./src/config/firebase.ts && firebase use development",
+    "env:prod": "cp ./config/firebase/development/config.ts ./src/config/firebase.ts && firebase use production",
     "copy-images": "cp -R ./src/assets/images ./dist-web",
     "build:web": "cross-env platform=web webpack --config=web/webpack/prod.js --progress --colors --mode=production",
     "build:web:dev": "yarn run env:dev && yarn run build:web",
