--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "7.5.5",
     "@babel/plugin-proposal-decorators": "7.4.4",
     "@babel/preset-env": "7.5.5",
+    "@prodo/babel-plugin": "^0.1.2",
     "@react-native-community/cli": "1.10.0",
     "@storybook/addon-a11y": "^5.2.3",
     "@storybook/addon-actions": "^5.2.1",
@@ -41,11 +42,9 @@
     "@types/react": "16.8.24",
     "@types/react-dom": "^16.9.3",
     "@types/react-native": "^0.60.22",
-    "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
     "@types/react-router-native": "^5.1.0",
     "@types/react-test-renderer": "^16.9.1",
-    "@types/redux-logger": "^3.0.7",
     "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "2.1.0",
     "@typescript-eslint/parser": "2.1.0",
@@ -72,21 +71,18 @@
     "webpack-merge": "4.2.2"
   },
   "dependencies": {
+    "@prodo/core": "^0.1.2",
+    "@prodo/logger": "^0.1.2",
     "color": "^3.1.2",
     "fuse.js": "^3.4.5",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-native": "0.59.10",
     "react-native-windows": "0.59.0-rc.3",
-    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
     "reactxp": "2.0.0-rc.1",
-    "redux": "^4.0.4",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "rnpm-plugin-windows": "^0.3.5",
-    "typesafe-actions": "^5.1.0"
+    "rnpm-plugin-windows": "^0.3.5"
   },
   "workspaces": {
     "nohoist": [
