--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,8 +14,8 @@
     "build:types": "tsc --emitDeclarationOnly",
     "start:storybook": "start-storybook -p 6006 -s ./src",
     "build:storybook": "build-storybook",
-    "env:dev": "cp ./config/firebase/development/config.ts ./src/config/firebase.ts",
-    "env:prod": "cp ./config/firebase/development/config.ts ./src/config/firebase.ts",
+    "env:dev": "cp ./config/firebase/development/config.ts ./src/config/firebase.ts && cp ./config/firebase/development/google-services.json ./android/app/google-services.json && cp ./config/firebase/development/GoogleService-Info.plist ./ios/GoogleService-Info.plist",
+    "env:prod": "cp ./config/firebase/development/config.ts ./src/config/firebase.ts && cp ./config/firebase/production/google-services.json ./android/app/google-services.json && cp ./config/firebase/production/GoogleService-Info.plist ./ios/GoogleService-Info.plist",
     "copy-images": "cp -R ./src/assets/images ./dist-web",
     "build:web": "cross-env platform=web webpack --config=web/webpack/prod.js --progress --colors --mode=production",
     "build:web:dev": "yarn run env:dev && yarn run build:web",
@@ -79,6 +79,7 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-native": "0.59.10",
+    "react-native-firebase": "^5.5.6",
     "react-native-windows": "0.59.0-rc.3",
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
