--- a/packages/make-countries/tsconfig.json
+++ b/packages/make-countries/tsconfig.json
@@ -7,8 +7,9 @@
     "sourceMap": true,
     "strict": true,
     "target": "es2017",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "compileOnSave": true,
-  "include": ["./src/**/*"]
+  "include": ["src", "src/credentials.json"]
 }
