App/Get country location

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,8 +14,8 @@
     "build:types": "tsc --emitDeclarationOnly",
     "start:storybook": "start-storybook -p 6006 -s ./src",
     "build:storybook": "build-storybook",
-    "env:dev": "cp ./config/firebase/development/config.ts ./src/config/firebase.ts && cp ./config/firebase/development/google-services.json ./android/app/google-services.json && cp ./config/firebase/development/GoogleService-Info.plist ./ios/GoogleService-Info.plist",
-    "env:prod": "cp ./config/firebase/development/config.ts ./src/config/firebase.ts && cp ./config/firebase/production/google-services.json ./android/app/google-services.json && cp ./config/firebase/production/GoogleService-Info.plist ./ios/GoogleService-Info.plist",
+    "env:dev": "cp ./config/development/config.ts ./src/config/env.ts && cp ./config/development/google-services.json ./android/app/google-services.json && cp ./config/development/GoogleService-Info.plist ./ios/GoogleService-Info.plist",
+    "env:prod": "cp ./config/development/config.ts ./src/config/env.ts && cp ./config/production/google-services.json ./android/app/google-services.json && cp ./config/production/GoogleService-Info.plist ./ios/GoogleService-Info.plist",
     "copy-images": "cp -R ./src/assets/images ./dist-web",
     "build:web": "cross-env platform=web webpack --config=web/webpack/prod.js --progress --colors --mode=production",
     "build:web:dev": "yarn run env:dev && yarn run build:web",
@@ -73,6 +73,7 @@
   "dependencies": {
     "@prodo/core": "^0.1.2",
     "@prodo/logger": "^0.1.2",
+    "axios": "^0.19.0",
     "color": "^3.1.2",
     "firebase": "^7.3.0",
     "fuse.js": "^3.4.5",
